# UmapyoiEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  run.bat
Assets/Scenes/: NEW.json  data.json  test_collider.json
Assets/Scripts/: kappa.lua  kappaScale.lua
Configs/: config.json
Engine/: CMakeLists.txt  Graphics.cpp  Graphics.hpp  Input.cpp  InputSystem.cpp  InputSystem.h  Math.hpp  Matrix.hpp  Sound.cpp  Sound.hpp  Vector.hpp  Window.cpp  Window.hpp
Engine/AI/: StateMachine.hpp  pathfinding.cpp  pathfinding.hpp
Engine/Core/: AudioEvents.h  BaseSerializer.h  DebugEvents.h  ECSEvents.h  EngineConfig.h  EngineConfigSerializer.h  EventSystem.cpp  EventSystem.h  EventType.h  EventTypes.h  FilePaths.h  GameSerializer.h  IMGUIEvents.h  InputEvents.h  PhysicsEvents.h  PlayerEvents.h  ResourceEvents.h  SceneEvents.h  SystemManager.h  SystemType.h  WindowEvents.h
Engine/Debug/: Debugger.hpp
Engine/Debugging/: CrashLogger.cpp  CrashLogger.hpp  Debugger.cpp  Debugger.hpp
Engine/ECS/Components/: Camera.h  Collider.h  Enemy.h  LuaScript.h  Player.h  RigidBody.h  Sprite.h  SpriteRenderer.h  Transform.h
Engine/ECS/Core/: ComponentArray.cpp  ComponentArray.h  ComponentArray.hpp  ComponentManager.cpp  ComponentManager.h  ComponentManager.hpp  Coordinator.cpp  Coordinator.h  Coordinator.hpp  EntityManager.cpp  EntityManager.h  EntityManager.hpp  SerializationBase.h  System.h  System.hpp  SystemManager.cpp  SystemManager.h  SystemManager.hpp  Types.h  Types.hpp
Engine/ECS/Systems/: CameraSystem.cpp  CameraSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  LuaScriptingSystem.cpp  LuaScriptingSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerControllerSystem.cpp  PlayerControllerSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  StateMachineSystem.cpp  StateMachineSystem.hpp
Engine/Events/: CollisionEvent.h  DebugEvents.h  IMGUIEvents.h  PhysicsEvents.h  ResourceEvents.h  SceneEvents.h
Engine/FileSystem/: FileSystem.hpp
Engine/Math/: Math.h  Math.hpp  Matrix.h  Matrix.hpp  Vector.h  Vector.hpp
Engine/MemoryManager/: MemoryManager.cpp  MemoryManager.hpp
Engine/RapidJSON/: document.h  rapidjson.h
Engine/RapidJSON/internal/: ieee754.h
Engine/Systems/: Camera.cpp  Camera.hpp  CameraSystem.cpp  Graphics.cpp  Graphics.hpp  Input.cpp  Input.hpp  InputSystem.cpp  InputSystem.h  ResourcesManager.cpp  ResourcesManager.hpp  ResourcesTypes.hpp  SceneManager.cpp  SceneManager.h  SceneType.cpp  SceneType.h  Sound.cpp  Sound.hpp  SpriteAnimator.h  TMP_CameraSystem.hpp  TestScene.h  Tmp_CameraSystem.cpp  Window.cpp  Window.hpp
Engine/WIP_Scripts/: ApplicationOverlay.h  EditorOverlay.h  EditorScene.h  GraphicTest.h  ImguiManager.cpp  ImguiManager.h  RuntimeOverlay.h  TestScene.h  TestScene2.h  Test_Ecs_System.cpp  Test_Ecs_System.h  Test_Graphics.cpp  Test_Graphics.h  Test_Input_Events.h
Engine/fmod/inc/: fmod_errors.h
Engine/glad/include/glad/: glad.h
Engine/glad/src/: glad.c
Engine/imgui/: imgui.cpp
Game/: CMakeLists.txt  main.cpp
